--- a/src/components/Subscription/SubscriptionPlans.css
+++ b/src/components/Subscription/SubscriptionPlans.css
@@ -1,6 +1,6 @@
 /* General Styles */
 .subscription-plans {
-    font-family: "Arial", sans-serif;
+ 
     width: 80%;
     margin: 0 auto;
     text-align: center;
@@ -92,7 +92,7 @@
 
 .plans-table thead th {
     padding: 30px 15px !important; 
-    background-color:#f7faff ;
+    background-color: white;
     font-weight: bold;
 }
 
@@ -175,7 +175,7 @@
     max-width: 200px;
     font-size: 14px;
     font-weight: bold;
-    margin-left: 30px;
+    margin-left: 10px;
     background-color: #f7faff;
     text-align: center;
     vertical-align: top;
@@ -201,6 +201,7 @@
 .tick-icon {
     color: #ff7a59;
     font-size: 20px;
+    margin-top: 10px;
 }
 
 /* Table Header Styling */
@@ -327,7 +328,7 @@ border-top-left-radius: 4px !important;  }
   /* Optional: Border for the selected column */
   
   .plans-table td.feature-1-free-article.plan-column-selected {
-    border-bottom: 3px solid #007bff !important; /* Border color and style for this column */
+    border-bottom: 3px solid #007bff; /* Border color and style for this column */
     border-radius: 10px;
   }
   
@@ -335,7 +336,8 @@ border-top-left-radius: 4px !important;  }
     text-align: center; /* Optional: Center align text in cells */
   }
   
-  .plans-table td.feature-1-free-article.plan-column-selected  {
-    border-bottom: 3px solid #007bff !important; /* Border color and style for this column */
-   }
+
+
+
+
   
