--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -563,14 +563,14 @@ position: relative;
 padding-top:3px ;
 position: relative;
   border-radius: 5px;
-border: none;
-  background: #0067FF;
+border: 1px solid #FF7F50;
+  background: #ffffff;
   font-family: Matter;
 font-size: 12px;
 font-weight: 600;
 line-height: 24px;
 text-align: center;
-color: #FFFFFF;
+color: #FF7F50;
 
 
   
