--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -653,7 +653,7 @@ align-items: center;
 
   .form-overall-container {
     position: relative;
-    top: 10px;
+    top: -100px;
     width: 100%;
     padding: 0 10px;
     box-sizing: border-box;
@@ -678,7 +678,7 @@ align-items: center;
     position: relative;
     width: 100%;
     height: 22px;
-    top: 80px;
+    top: 70px;
     left: 0;
     font-family: 'Matter', sans-serif;
     font-size: 14px;
@@ -749,6 +749,86 @@ align-items: center;
 
   .invalid-feedback {
     margin-left: 5%;
+  }
+
+
+
+  .or-sign-up-container {
+    display: flex;
+
+
+    width: 100%;
+    position: relative;
+    top: -2px;
+    flex-direction: column;
+    justify-content: center; 
+  }
+  .or-sign-up{
+    width: 16px;
+  height: 19px;
+  top: 386px;
+  left: 0px;
+  font-family: 'Matter', sans-serif;
+  font-size: 10.5px;
+  font-weight: 600;
+  line-height: 12.6px;
+  text-align: left;
+  color: #272848;
+  position: relative;
+  margin-left: auto; 
+  margin-right: auto;
+  }
+
+  .end-line-sign-up{
+  width: 116px;
+  height: 2px;
+  top: 372px;
+  left: -80px;
+  position: relative;
+  border-bottom: 2px solid #F0F0F5;
+
+  justify-content: center; 
+  margin-left: auto; 
+  margin-right: auto;
+  }
+  .end-line-sign-up-two{
+    width: 116px;
+    height: 2px;
+    top: 370px;
+    left: 80px;
+    position: relative;
+    border-bottom: 2px solid #F0F0F5;
+    margin-left: auto; 
+    margin-right: auto;
+
+    justify-content: center; 
+    }
+  
+    
+    .login-option-container{
+      display: flex;
+      position: relative;
+      top: 405px;
+      left: 0px;
+      justify-content: center; 
+  
+    }
+    
+  .provider-option-container{
+    display: flex;
+    position: relative;
+    top: 430px;
+    left: 0px;
+    justify-content: center; 
+  }
+
+  .account-sign-up-provider{
+    width: 146px;
+    height: 35px;
+    font-size: 14px;
+    font-weight: 600;
+
+      
   }
 }
 
@@ -824,7 +904,7 @@ align-items: center;
     position: relative;
     width: 100%;
     height: 22px;
-    top: 80px;
+    top: 70px;
     left: 0;
     font-family: 'Matter', sans-serif;
     font-size: 14px;
@@ -1013,7 +1093,7 @@ height: auto;
 
   .form-overall-container {
     position: relative;
-    top: -140px;
+    top: -100px;
     width: 100%;
     padding: 0 10px;
     box-sizing: border-box;
@@ -1230,8 +1310,9 @@ height: auto;
 
   .form-overall-container {
     position: relative;
-    top: -140px;
+    top: -110px;
     width: 100%;
+
     padding: 0 10px;
     box-sizing: border-box;
   }
@@ -1293,8 +1374,8 @@ height: auto;
     border-radius: 10px;
     padding: 1rem;
     font-family: 'Matter', sans-serif;
-    width: 90%;
-    margin-left: 5%;
+    width: 70%;
+    margin-left: 13%;
     box-sizing: border-box;
   }
 
@@ -1303,7 +1384,7 @@ height: auto;
     color: #333;
     display: block;
     margin-bottom: 0.5rem;
-    margin-left: 5%;
+    margin-left: 13%;
   }
 
   .radio-buttons {
@@ -1468,7 +1549,7 @@ height: auto;
   .smile-emoji {
     display: flex;
     position: relative;
-    top: -10vh;
+    top: -4vh;
     left: 2%;
   }
 
@@ -1621,10 +1702,10 @@ height: auto;
 
     width: 100%;
     position: relative;
-    top: 20px;
+    top: 10px;
     flex-direction: column;
     justify-content: center; 
-    left: 180px;
+    left: 200px;
     margin-left: auto; 
     margin-right: auto;
   }
