--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,6 +1,13 @@
 .navbar-brand {
   margin-left: 60px;
 }
+.free-trial-doctor{
+  position: relative;
+  left: 80px;
+
+  font-size: 16px;
+  font-weight: 400px;
+}
 
 .brand-img {
   width: 150px;
@@ -10,7 +17,7 @@
 .trial-countdown {
   min-width: 150px; 
   padding: 5px 10px; 
-  background-color: #ffffff; 
+  /* background-color: #ffffff;  */
   color: #333; 
   border-radius: 5px; 
   color:#FF7F50 ;
@@ -22,7 +29,8 @@
   font-weight: 400px;
   white-space: nowrap; 
   position: relative; 
-  top: 10px;
+  top: 20px;
+  left: -58px;
 }
 .nav-item.active {
   position: relative; 
