--- a/src/components/FilterPage/filter.css
+++ b/src/components/FilterPage/filter.css
@@ -14,7 +14,7 @@
 .filter-heading-reset {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-top: 5px;
     margin-bottom: 10px;
 }
