added edit profile

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,13 +1,6 @@
 .navbar-brand {
   margin-left: 60px;
 }
-.free-trial-doctor{
-  position: relative;
-  left: 80px;
-
-  font-size: 16px;
-  font-weight: 400px;
-}
 
 .brand-img {
   width: 150px;
@@ -17,7 +10,7 @@
 .trial-countdown {
   min-width: 150px; 
   padding: 5px 10px; 
-  /* background-color: #ffffff;  */
+  background-color: #ffffff; 
   color: #333; 
   border-radius: 5px; 
   color:#FF7F50 ;
@@ -29,8 +22,7 @@
   font-weight: 400px;
   white-space: nowrap; 
   position: relative; 
-  top: 20px;
-  left: -58px;
+  top: 10px;
 }
 .nav-item.active {
   position: relative; 
@@ -43,7 +35,7 @@
 
 /* Background color for doctors page only */
 .navbar-doctor {
-  background-color: #ffffff; 
+  background-color: #ffffff ; 
 }
 
 .nav-link-style {
@@ -61,6 +53,8 @@
 .dropdown-menu {
   background-color: #272848;
 }
+
+
 
 .dropdown-item {
   color: #fff;
@@ -196,3 +190,13 @@
 
 
 
+.find-doctor.nav-link.nav-link-style {
+  background: none;
+  border: none;
+  
+  cursor: pointer; /* Indicate that it is clickable */
+}
+
+.find-doctor.nav-link.nav-link-style:hover {
+  color: #007bff; /* Optionally, add a hover effect */
+}
