--- a/src/components/Footerpage/About.css
+++ b/src/components/Footerpage/About.css
@@ -1,8 +1,10 @@
+
 .about-us-container11 {
     padding: 70px;
-    font-family: Arial, sans-serif;
+    
     color: #333;
     margin-bottom: 30px;
+
 }
 
 .top-section11 {
@@ -38,8 +40,9 @@
     font-weight: bold;
     font-size: 0.9em;
     width: 266px;
-    height: 70px;
-    text-align: center;
+    height: 75px;
+    text-align: center !important;
+    margin-bottom: 20px;
    
    
 }
@@ -60,7 +63,7 @@
     padding: 20px;
     padding-left: 30px;
     text-align: justify; /* Justify text in the last updated paragraph */
-   margin-top: 20px;
+   margin-top: 50px;
 }
 
 .content-section11 h2 {
@@ -69,17 +72,30 @@ padding-left: 10px;
     font-size: 1.8em;
     margin-bottom: 20px;
     color: #333548;
+    font-weight: bold;
 }
+
+.content-section11 h6{
+    font-weight: 600;
+    color: #333548;
+
+ 
+}
+
+
+.bottom-images11
 
 .content-section11 p {
     font-size: 14px;
-    margin-bottom: 20px;
+    margin-bottom: 30px !important;
     line-height: 1.6;
+    font-weight: bold;
+    padding-bottom: 20px;
 }
 
 .bottom-section11 {
     display: flex;
-    align-items: center;
+    align-items: center !important;
     
    
     padding: 20px;
@@ -126,7 +142,8 @@ padding-left: 10px;
     padding: 5px;
     /* border-left: 4px solid #007bff; */
     border-radius: 4px;
-    box-shadow: 1px  1px 1px 1px #c1d2ec;
+    /* box-shadow: 1px  1px 1px 1px #c1d2ec; */
+    text-align: left ;
 }
 
 .mission-image11 {
@@ -139,6 +156,7 @@ padding-left: 10px;
     border-radius: 8px;
     margin-left:100px ;
     margin-top: -30px;
+    
 }
 .top-image111{
     width:276px !important;
@@ -150,7 +168,7 @@ padding-left: 10px;
 .top-image211{
     width:
     276px !important;
-    height:218px !important;
+    height:170px !important;
     object-fit: cover;
 
   
@@ -160,7 +178,7 @@ padding-left: 10px;
 
 .top-image311{
     width:276px!important;
-    height:318px !important;
+    height:308px !important;
     margin-top: -170px;
     object-fit: cover;
 
@@ -195,14 +213,18 @@ padding-left: 10px;
 .cards-row11 {
     display: flex;
     justify-content: space-around;
+    gap: 35px;
+    align-items: center;
     flex-wrap: wrap;
+    text-align: center;
+    margin-left: 50px;
 }
 
 .card11 {
-    background-color:#F2F6FF;
+    /* background-color:#F2F6FF; */
     padding: 20px;
     border-radius: 2px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
     width: 300px;
     margin: 10px;
     text-align: left;
@@ -249,7 +271,7 @@ padding-left: 10px;
     text-align: left;
     margin-bottom: 50px;
     margin-top: 20px;
-}
+;}
 
 .problems-column11 ul {
     list-style-type: none;
@@ -263,7 +285,7 @@ padding-left: 10px;
 }
 
 .problem-number11 {
-    background-color: #007bff;
+    background-color: #FF7F50;
     color: #fff;
     border-radius: 50%;
     width: 40px;
@@ -296,7 +318,7 @@ padding-left: 10px;
 
 .problem-numbers11{
     width: 530px;
-    border-bottom:2px solid #6c757d;;
+    border-bottom:2px solid #cccccc;
     margin-left: -50px;
 }
 
@@ -313,21 +335,20 @@ padding-left: 10px;
 
 
 
-
-
 .regions-section11 {
     background-color: #F4F7FC;
    
     text-align: center;
-    /* background-image: url('/Frame.png'); */
+    background-image: url('../../../public/Frame.png');
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
-    max-width: 1500px;
-    width: 1280px ;
-    margin-left: -60px;
+   
+    width: 1430px;
+    text-align: center;
     margin-top: 50px;
-    padding: 60px;
+    padding: 100px;
+ position: relative;
+ left: -60px;
     
    
 } image is in public folder
@@ -349,6 +370,7 @@ padding-left: 10px;
     position: relative;
     display: inline-block;
     padding-left: 20px;
+    text-align: center;
 }
 
 .title-bar11 {
@@ -404,6 +426,11 @@ padding-left: 10px;
 }
 
 .cardse23{
-    margin-left: 430px;
-    margin-top: 50px;
+    text-align: center;
+    /* margin-left: 430px; */
+    margin-top: 70px;
+}
+.nem{
+    margin-left: 80px;
+    margin-bottom: -50px;
 }
